# KAVPlayer

./: AVPlayer.sln  CMakeLists.txt
AVPlayerWidget/: AVPlayerWidget.vcxproj
AVPlayerWidget/GeneratedFiles/Debug/: moc_adev.cpp  moc_decoder.cpp
AVPlayerWidget/GeneratedFiles/Release/: moc_AVPlayerWidget.cpp  moc_demux.cpp  moc_msger.cpp
KAVPlayer/: KAVPlayer.qrc  KAVPlayer.rc  KAVPlayer.vcxproj
KAVPlayer/GeneratedFiles/: qrc_KAVPlayer.cpp
KAVPlayer/GeneratedFiles/Release/: moc_ClickSlider.cpp  moc_KAVPlayer.cpp
src/: AVPlayerWidget.cpp  AVPlayerWidget.h  ClickSlider.cpp  ClickSlider.h  KAVPlayer.cpp  KAVPlayer.h  avplayerwidget_global.h  main.cpp  todo.txt
src/adev/: adev.cpp  adev.h
src/clock/: clock.cpp  clock.h
src/decoder/: decoder.cpp  decoder.h
src/demux/: demux.cpp  demux.h
src/error/: error.cpp  error.h
src/inifile/: inifile.cpp  inifile.h
src/log/: log.cpp  log.h
src/msger/: msger.cpp  msger.h
src/queue/: frame_queue.cpp  frame_queue.h  packet_queue.cpp  packet_queue.h
src/render/: render.cpp  render.h
src/utils/: utils.cpp  utils.h
src/vdev/: vdev.cpp  vdev.h
x64/Debug/playlist/: playlist.pl
x64/Debug/setting/: setting.ini
